#119 Fix displaying card on mobile for community section

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -144,6 +144,8 @@
 .block.cards.modest > ul {
     display: flex;
     gap: 50px;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .block.cards.modest > ul > li {
